test/parsing/ferguson/many-errors-2.chpl
proc real t6() {
}

proc t7() {
  ++;
}
proc f {
  + +
}

module othermodule {
  int x;
}

enum X {
  int x;
  real y;
}


